# StreamScreen

./: README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  server.rs  server_test.rs
test-client/: Cargo.toml
test-client/src/: main.rs
